[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leetshell"
version = "0.1.0"
description = "Solve LeetCode problems without leaving your terminal"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "cosmicphantom"},
]
keywords = ["leetcode", "terminal", "tui", "cli", "competitive-programming", "algorithms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "blessed>=1.20.0",
    "pygments>=2.17.0",
    "httpx>=0.27.0",
    "html2text>=2024.2.26",
    "websockets>=13.0",
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://github.com/Jatin-Shihora/leetshell"
Repository = "https://github.com/Jatin-Shihora/leetshell"
"Bug Tracker" = "https://github.com/Jatin-Shihora/leetshell/issues"

[project.scripts]
leetshell = "leetshell.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/leetshell"]
